# qrtransfer

./: .gitignore  CNAME  Cargo.toml  Dioxus.toml  README.md  build.rs  build.sh  data.py  index-411605338e6fbd26.js  index-411605338e6fbd26_bg.wasm  index-71ed2d08522a08e1.js  index-71ed2d08522a08e1_bg.wasm  index-b5e50b10c725386f.js  index-b5e50b10c725386f_bg.wasm  index.html  qr-scanner.min.js.map  qrtransfer-5019a3efcf1b15c9.js  qrtransfer-5019a3efcf1b15c9_bg.wasm  qrtransfer-6690b972d013a3d8.js  qrtransfer-6690b972d013a3d8_bg.wasm  qrtransfer-95cf0dd6188ee63f.js  qrtransfer-95cf0dd6188ee63f_bg.wasm  qrtransfer-c8eb68a02b993a65.js  qrtransfer-c8eb68a02b993a65_bg.wasm  qrtransfer-e8505a26bf429cea.js  qrtransfer-e8505a26bf429cea_bg.wasm  receive.js  receive_pythonista.py  requirements.txt  run.sh  send.js  send.py  setup.py
.github/workflows/: deploy-gh-pages.yml  python-publish.yml  release-windows.yml  release.yml
assets/: favicon.svg.br  qrtransfer-dxh2e1d50c8ab5d12c3.js  qrtransfer-dxh558f9a2aacdd1d33.js  qrtransfer-dxh68197793d089a36f.js  qrtransfer-dxh7f1f6b626691ead.js  qrtransfer-dxhc2292a33e96b7a.js  qrtransfer-dxhf845cc1543e65793.js  qrtransfer-dxhfb67911eecf618d6.js  qrtransfer_bg-dxh1a9e7e35212156c4.wasm  qrtransfer_bg-dxh1c999faf9a5ef85f.wasm  qrtransfer_bg-dxh6ec7e4b6d6497245.wasm  qrtransfer_bg-dxha812cb56f73a73ab.wasm  qrtransfer_bg-dxhc7e1ea401b2c6fac.wasm  qrtransfer_bg-dxhd9f8e62d2713fbf.wasm  qrtransfer_bg-dxhf3aa11951dc3e2a.wasm  receive.js  receive.js.br
assets/bootstrap/: bootstrap.bundle.min.js  bootstrap.min.css
assets/dioxus/: qrtransfer.js  qrtransfer_bg.wasm
assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js
pkg/: README.md  package.json  qrtransfer.d.ts  qrtransfer.js  qrtransfer_bg.wasm  qrtransfer_bg.wasm.d.ts
publish/: index.html  receive.js  send.js
qrtransfer/: data.py  encoder.py  send.py
src/: base10.rs  compress.rs  decoder.rs  lib.rs  main.rs  protocol.rs  scan.rs  send.rs  utils.rs
src/encoder/: mod.rs  qr.rs
src/receive/: decoder.rs  mod.rs
src/send/: mod.rs  scroll.rs
src/send/encoder/: mod.rs  qr.rs
