[package]
name = "qrtransfer"
version = "0.1.0"
authors = ["lxu <lxu@junzhiam.com>"]
edition = "2018"

[dependencies]
qrcode = "0.14.1"
base64 = "0.22.1"
sha-1 = "0.10"
indexmap = "2.5.0"
quircs = "0.10"
image = "0.25.2"
brotli = "6.0.0"
futures = "0.3.30"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlInputElement',
    'FileReader',
    'File',
    'ProgressEvent',
    'ScrollToOptions',
    'ScrollBehavior',
    'FileList',
    'Window',
    'console',
] }
dioxus = { version = "0.5.6", features = ["web"] }
js-sys = "0.3"
