[package]
name = "qrtransfer"
version = "0.1.0"
authors = ["lxu <lxu@junzhiam.com>"]
edition = "2018"

[dependencies]
qrcode = "0.14.1"
base64 = "0.22.1"
sha-1 = "0.10"
indexmap = "2.5.0"
quircs = "0.10"
image = "0.25.2"
brotli = "7.0.0"
futures = "0.3.30"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.43"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlInputElement',
    'FileReader',
    'File',
    'ProgressEvent',
    'ScrollToOptions',
    'ScrollBehavior',
    'FileList',
    'Window',
    'console',
    'AudioContext',
    'AudioDestinationNode',
    'AudioParam',
    'GainNode',
    'OscillatorType',
    'OscillatorNode',
    'CanvasRenderingContext2d',
    'HtmlCanvasElement',
    'HtmlVideoElement',
    'Navigator',
    'MediaStream',
    'MediaStreamConstraints',
    'MediaDevices',
    'ImageData',
    'MediaStreamTrack',
] }
dioxus = { version = "0.7", features = ["web"] }
js-sys = "0.3"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
