[package]
name = "qrtransfer"
version = "0.1.0"
authors = ["WestXu <xu-lai-xi@live.com>"]
edition = "2021"

[dependencies]
qrcode = "0.14.1"
base64 = "0.22.1"
sha-1 = "0.10.1"
indexmap = "2.12.0"
quircs = "0.10.3"
image = "0.25.9"
brotli = "8.0.2"
futures = "0.3.31"
wasm-bindgen = { version = "0.2.105", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.55"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.82", features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlInputElement',
    'FileReader',
    'File',
    'ProgressEvent',
    'ScrollToOptions',
    'ScrollBehavior',
    'FileList',
    'Window',
    'console',
    'AudioContext',
    'AudioDestinationNode',
    'AudioParam',
    'GainNode',
    'OscillatorType',
    'OscillatorNode',
    'CanvasRenderingContext2d',
    'HtmlCanvasElement',
    'HtmlVideoElement',
    'Navigator',
    'MediaStream',
    'MediaStreamConstraints',
    'MediaDevices',
    'ImageData',
    'MediaStreamTrack',
    'MediaQueryList',
    'MediaQueryListEvent',
] }
dioxus = { version = "0.7.1", features = ["web"] }
js-sys = "0.3.82"
gloo-timers = "0.3.0"
mime_guess = "2.0.5"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
